adeed web config

--- a/AspIdentitydemo/Web.config
+++ b/AspIdentitydemo/Web.config
@@ -18,10 +18,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="email" value="xxx@gmail.com" />
-    <add key="password" value="xxx@123" />
-    <add key="TWILIO_ACCOUNT_SID" value="xxxx" />
-    <add key="TWILIO_AUTH_TOKEN" value="xxx" />
-    <add key="From" value="+16099288504" />
+    <add key="password" value="xx@123" />
+    <add key="TWILIO_ACCOUNT_SID" value="xx" />
+    <add key="TWILIO_AUTH_TOKEN" value="xx" />
+    <add key="From" value="+xx" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
