Add Multi select category and fetched

--- a/AspIdentitydemo/Web.config
+++ b/AspIdentitydemo/Web.config
@@ -10,18 +10,18 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-9V0M57M;Initial Catalog=AspIdentitydemo;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=XXXX Catalog=AspIdentitydemo;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpges:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="email" value="xxx@gmail.com" />
-    <add key="password" value="xx@123" />
-    <add key="TWILIO_ACCOUNT_SID" value="xx" />
-    <add key="TWILIO_AUTH_TOKEN" value="xx" />
-    <add key="From" value="+xx" />
+    <add key="email" value="XXXX" />
+    <add key="password" value="XXX" />
+    <add key="TWILIO_ACCOUNT_SID" value="XXXX" />
+    <add key="TWILIO_AUTH_TOKEN" value="XXXX" />
+    <add key="From" value="XXXX" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
